--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   easy_dashboard: ^0.0.2
   firebase_core: ^2.24.0
   firebase_auth: ^4.15.0
+  cloud_firestore: ^3.2.2
   # Add other Firebase dependencies as needed
 
 
