Firebase für all plattformen

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -23,9 +23,12 @@ if (flutterVersionName == null) {
 }
 
 android {
+    lintOptions {
+        disable 'deprecation'
+    }
     namespace "com.example.bibcrush"
     compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
+    ndkVersion "25.1.8937393"
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -49,6 +52,7 @@ android {
         targetSdkVersion flutter.targetSdkVersion
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        multiDexEnabled true
     }
 
     buildTypes {
