--- a/macos/Runner/GoogleService-Info.plist
+++ b/macos/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.example.bibcrush</string>
+	<string>com.example.bibcrush.RunnerTests</string>
 	<key>PROJECT_ID</key>
 	<string>bibcrush-97726</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:194587936025:ios:df1d26d79e7d94cd01f188</string>
+	<string>1:194587936025:ios:c4052a04c2db2c8101f188</string>
 </dict>
 </plist>
