--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <application
-        android:label="bibcrush"
+        android:label="BibCrush"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
