--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   firebase_auth: ^4.15.3
   cloud_firestore: ^4.13.6
   flutter_native_splash: ^2.3.8
+  provider:
 
   # Add other Firebase dependencies as needed
 
