--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -47,5 +47,11 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>This app requires access to the photo library to upload photos.</string>
+
+		<key>NSCameraUsageDescription</key>
+		<string>This app requires access to the camera to take photos.</string>
 	</dict>
 </plist>
