themedata font, search page ui, getuser textstyle added, profile page delete acc

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   cloud_firestore: ^4.13.6
   flutter_native_splash: ^2.3.8
   provider:
+  google_fonts: 6.1.0
 
   # Add other Firebase dependencies as needed
 
