--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,9 +41,10 @@ dependencies:
   cloud_firestore: ^4.13.6
   flutter_native_splash: ^2.3.8
   image_picker: ^1.0.5
-  firebase_storage: ^11.5.6
   provider:
   google_fonts: 6.1.0
+  firebase_storage: ^11.5.6
+  timeago: ^3.6.0
 
   # Add other Firebase dependencies as needed
 
