--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   google_fonts: 6.1.0
   firebase_storage: ^11.5.6
   timeago: ^3.6.0
+  intl: ^0.18.0
 
   # Add other Firebase dependencies as needed
 
